# DragonFruit

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  DragonFruit.code-workspace  LOCALE.md  README.md  crowdin.yml  lingui.config.ts  mkdocs.yml  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tmp_err.txt  tmp_err_utf8.txt  tmp_ret.txt  tsconfig.json
.github/instructions/: pr-writing.instructions.md
.github/workflows/: build-nightly.yml  dev-prerelease.yml  docs-pages.yml  flatpak.yml  main-release.yml  plugin-registry-guardrails.yml  pr-build-followup.yml  pr-check-build.yml  pr-linux-build.yml  release.yml  tauri-bundle.yml  tauri-preview-remote.yml  tauri-preview.yml  tauri-release.yml  warm-rust-cache.yml
.scratch/: BugNotes.md  lys-hollowing-format.md  lys-tapered-twig-brace-on-twig-plan.md  lys-twig-contact-disk-plan.md  organic-cut-key-dev-plan.md  organic-cut-wafer-handoff.md  organic-cuts-dev-plan.md
.scratch/lys-inspect/: dump-o4-transform.mjs  inspect.ts
.scratch/lys-twig-probe/: diag-frame-reconcile.mjs  diag-transform.mjs  inspect-blobs.mjs  inspect-obj-fields.mjs  probe.mjs  probe2.mjs  probe3-production-frame.mjs  probe4-optionB.mjs  probe5-optionB2.mjs
.windsurf/workflows/: read-this-first.md
1. Documentation/: ARCHITECTURE_AND_HANDOFF.md  FeatureList.md  LYS_TO_STL_FORMAT_SPEC.md
1. Documentation/LogicBible/: 2 Auto-Lift.md  4 CompactUIStyleGuide.md  5 Footprint Border Generation.md  6 GPU-Picking.md  7 Hotkeys.md  8 Snapping.md  Footprint Border Generation.md  GPU-Picking.md  Hotkeys.md  IslandScan-ScanlineMethod.md  Lychee Support Mapping.md  Lychee_to_Dragonfruit_Mapping.md  MASTER_LysConversion_Bible.md  Snapping.md
1_Documentation/: 1. Project Goals.md  7. GridSupports.md  8. SupportPlacementHotkeyRules.md  9. Native Twin Optimization Plan.md  ARCHITECTURE_AND_HANDOFF.md  V3_AA_and_Advanced_Grayscale_Notes.md  VOXL_FORMAT_SPEC.md
1_Documentation/AnatomyOfSupports/: Anatomy-of-Supports.md  Branch.md  Contact-Tip-Research.md  Kickstand.md
1_Documentation/LogicBible/: 3 BVH-RaycastOptimization.md  4 CompactUIStyleGuide.md  Lychee Support Mapping.md  Lychee_to_Dragonfruit_Mapping.md  MASTER_LysConversion_Bible.md  NewSupportTypeGuide.md  Support Settings Anatomy Preview.md
2. Backup/: 00. Changelog.md
2_Backup/: 00. Changelog.md
Scratch/: LYS_Import_Coordinate_Findings.md  LYS_Importer_OnePass_Development_Plan.md  LYS_Stick_Import_Development_Plan.md  LYS_Support_Import_Stabilization_Development_Plan.md  LYS_TipCone_Baseline_V1.md  analyze_lys.py  preset-improvements-plan.md
Scratch/old scratch/: Editable_Mesh_Conversion_Development_Plan.md  LYS_Import_Dev_Plan.md  Mesh_Smoothing_Brush_Development_Plan.md  Remesh_Tool_Development_Plan.md  Shader_Customization_Development_Plan.md
assets/profiles/: printers.json
docs/: BACKUPS.md  LOCAL_STORAGE_SCHEMA.md  RTSP_RECLAIM_API_CONTRACT.md  index.md  page-tsx-refactor-handoff.md  requirements.txt
docs/dev/: architecture-and-handoff.md  architecture-overview.md  auto-support-planning-handoff.md  auto-supports-architecture.md  baked-support-reconstruction-plan.md  branch-supports.md  contributing.md  data-storage.md  formats.md  index.md  (+12 more)
flatpak/: .gitignore  FLATHUB.md  README.md  THUMBNAILER.md  build.sh  dragonfruit-launch.sh  dragonfruit-voxl-mime.xml  launcher.sh  org.openresinalliance.dragonfruit.desktop  org.openresinalliance.dragonfruit.metainfo.xml  org.openresinalliance.dragonfruit.yml
plugins/: CONTRIBUTING_COMPLEX_PLUGINS.md  README.md
public/: splashscreen.html
rust/dragonfruit-astar/: Cargo.toml
rust/dragonfruit-astar/src/: grid_astar.rs  indexed_heap.rs  lib.rs  types.rs
rust/dragonfruit-mesh-repair/: Cargo.toml  README.md  test-out.txt
rust/dragonfruit-mesh-repair/src/: analysis.rs  arrangement.rs  geodesic.rs  hollowing.rs  lib.rs  membrane.rs  organic_cut.rs  quality.rs  remesh.rs  repair.rs  report.rs  routing.rs  support_reconstruction.rs
rust/dragonfruit-mesh-repair/src/core/: bvh.rs  halfedge.rs  mesh.rs  mod.rs
rust/dragonfruit-mesh-repair/src/io/: mod.rs  obj.rs  staged.rs  stl.rs  three_mf.rs
rust/dragonfruit-mesh-repair/src/volumetric/: band.rs  close.rs  dc.rs  gwn.rs  mod.rs  qef.rs  remesh.rs  validate.rs
rust/dragonfruit-mesh-repair/tests/: band.rs  bench.rs  bvh_closest.rs  close.rs  dc.rs  gwn.rs  phase3_hygiene_guards.rs  red_phase3_input_hygiene.rs  remesh.rs  routing.rs  smoke.rs  wrap.rs
rust/dragonfruit-mesh-repair/tests/common/: mod.rs
rust/dragonfruit-openvdb-sys/: Cargo.toml  README.md  build.rs
rust/dragonfruit-openvdb-sys/cpp/: df_vdb_shim.cpp  df_vdb_shim.hpp
rust/dragonfruit-openvdb-sys/src/: lib.rs
rust/dragonfruit-organic-cut/: Cargo.toml
rust/dragonfruit-organic-cut/src/: geodesic.rs  key.rs  lib.rs  membrane.rs  organic_cut.rs  test_utils.rs
rust/dragonfruit-sdf/: Cargo.toml
rust/dragonfruit-sdf/src/: compute.rs  grid.rs  lib.rs
rust/dragonfruit-slicer-wasm/: Cargo.toml  README.md
rust/dragonfruit-slicer-wasm/src/: bvh.rs  fast_png.rs  job.rs  lib.rs  solid_slicer.rs
rust/dragonfruit-slicer-wasm/src/formats/: goo.rs  lumen.rs  nanodlp.rs
scripts/: build-thumbnail-providers.mjs  check-complex-plugin-allowlist.mjs  check-plugin-boundaries.mjs  gen_nsis_images.py  generate-builtin-simple-plugins.mjs  generate-plugin-registry.mjs  macos-embed-appex.mjs  materialize-doc-placeholder-assets.mjs  prepare-tauri-frontend.mjs  support-drag-perf.ts  sync-app-version.mjs  tauri-build.mjs  tauri-bundle-all.mjs  verify-generated-plugin-registry.mjs  verify-universal-bundle.mjs
src/: i18n.ts
src-tauri/: Cargo.toml  build.rs  generated_crate_requirements.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/assets/: license.txt
src-tauri/src/: astar.rs  generated_builtin_plugins.rs  main.rs  mesh_minima.rs  mesh_repair.rs  network.rs  plugin_registry.rs  sdf.rs  stl_budget.rs  support_painter.rs  updater_channel.rs  window_state.rs
(+938 files in other folders)
