[package]
name = "dragonfruit-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
dragonfruit-slicer = { path = "../rust/dragonfruit-slicer" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
