[package]
name = "dragonfruit-astar"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust-native A* pathfinder for DragonFruit support routing, with precomputed SDF integration"

[lib]
name = "dragonfruit_astar"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ahash = "0.8"
dragonfruit-sdf = { path = "../dragonfruit-sdf" }
