[package]
name = "dragonfruit-mesh-repair"
version = "0.1.0"
edition = "2021"
default-run = "dragonfruit-mesh-repair"

[lib]
name = "dragonfruit_mesh_repair"
path = "src/lib.rs"

[[bin]]
name = "dragonfruit-mesh-repair"
path = "src/bin/cli.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
bytemuck = { version = "1", features = ["derive"] }
thiserror = "1"
clap = { version = "4", features = ["derive"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.31", features = ["serialize"] }
ahash = "0.8"
smallvec = "1"

[dev-dependencies]
proptest = "1.9.0"
