[package]
name = "dragonfruit-mesh-repair"
version = "0.1.0"
edition = "2021"
default-run = "dragonfruit-mesh-repair"
license = "MIT"

[lib]
name = "dragonfruit_mesh_repair"
path = "src/lib.rs"

[[bin]]
name = "dragonfruit-mesh-repair"
path = "src/bin/cli.rs"

[features]
# Enable the manifold-csg backend for robust N-body union on fragmented meshes.
# Requires git + cmake + a C++ compiler (MSVC on Windows, gcc/clang on Linux/macOS).
# First build downloads and compiles manifold3d from source (~2 min).
manifold = ["dep:manifold-csg"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
bytemuck = { version = "1", features = ["derive"] }
thiserror = "1"
clap = { version = "4", features = ["derive"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.31", features = ["serialize"] }
ahash = "0.8"
smallvec = "1"
cdt = "0.1"
manifold-csg = { version = "0.1.4", optional = true, default-features = false }

[dev-dependencies]
proptest = "1.9.0"
