[package]
name = "dragonfruit-sdf"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Pre-computed signed distance field for DragonFruit support pathfinding"

[lib]
name = "dragonfruit_sdf"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
bytemuck = { version = "1", features = ["derive"] }
ahash = "0.8"
smallvec = "1"
