[package]
name = "dragonfruit-slicer-wasm"
version = "0.1.0"
edition = "2021"
description = "DragonFruit slicer core and container format encoders for WASM"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
wasm-bindgen = "=0.2.100"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
time = "=0.3.36"
time-core = "=0.1.2"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
